# FCF_HOMO

./: .clang-format  .gitignore  CMakeLists.txt  README.md
common_module/: CMakeLists.txt  common_module.c  common_module.h
cuda/: CMakeLists.txt  axpy.cu  cublas_utils.h  helloworld.cu  test.cxx
script/: bsub-LSEC.sh  build-flags.txt  generate_random_packed_balls_configuration.py  matplotlib_style.py  optimal_ref_parameters.py  plot_cg_ball_cent.py  plot_cg_ball_cent_cpu.py  plot_cg_ball_pack.py  plot_channels_history.py  plot_history.py  plot_history_balls_packed.py  plot_precond_solver_cpu.py  plot_precond_solver_cpu_upd.py  plot_precond_solver_gpu.py  plot_settings.py  plot_single_vs_double.py  test_dct_formula.py  test_scheme_convergence.py
src/common/: CMakeLists.txt  common.cpp  common.hpp
src/common_module/: CMakeLists.txt  common_module.c  common_module.cpp  common_module.h  common_module.hpp  common_module.tpp
src/cuda/: CMakeLists.txt  cuFctSolver.cu  cuFctSolver.hpp  cuFctSolver.tpp  cuda-fct-solver.cu  cuda-fct-solver.hpp  cuda_fct_solver.cu  cuda_fct_solver.hpp  cuda_fct_solver.tpp  cuda_utils.hpp  deviceQuery.txt
src/fftw3-mkl/: CMakeLists.txt  cpu-details.txt  cpu-fct-solver.cpp  cpu-fct-solver.hpp
src/fftw3-oneapi/: CMakeLists.txt  cpu-fct-solver.cpp  cpu-fct-solver.hpp
src/main/: CMakeLists.txt  get-random-packed-balls-configuration.cpp  main.c  main.cpp  test-cg-solver-ball-centered.cpp  test-cg-solver-balls-packed.cpp  test-channels-domain.cpp  test-float-balls-packed.cpp  test-precond-solver.cpp  test-scheme-convergence.cpp  test-smooth-convergence.cpp  test-stability-parked-balls.cpp  test-stability.cpp
